[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ship/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shapes/Rectangle.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Camera.gd" type="Script" id=3]
[ext_resource path="res://World/MainLevel.gd" type="Script" id=4]
[ext_resource path="res://World/Obstacles/LevelDivider/LevelDivider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utils/ProgressiveMusicPlayer/ProgressiveMusicPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Obstacles/Destructible/RandomWallGen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ship/Fuel/FuelBar.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 2000 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 720, 50 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="LeftWall" type="StaticBody2D" parent="." groups=["Walls"]]
position = Vector2( -30, 407 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 2, -9 )
shape = SubResource( 1 )

[node name="Rectangle" parent="LeftWall" instance=ExtResource( 2 )]
position = Vector2( 32, -1024 )
width = 20.0
height = 2000.0
colour = Color( 0.345098, 0.705882, 0.968627, 1 )

[node name="RightWall" type="StaticBody2D" parent="." groups=["Walls"]]
position = Vector2( 1301, 407 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 8, -9 )
shape = SubResource( 1 )

[node name="Rectangle" parent="RightWall" instance=ExtResource( 2 )]
position = Vector2( -41, -1024 )
width = 20.0
height = 2000.0
colour = Color( 0.345098, 0.705882, 0.968627, 1 )

[node name="DeathZone" type="StaticBody2D" parent="."]
position = Vector2( 641, 845 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource( 2 )

[node name="Ship" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
limit_left = 0
limit_right = 1280
limit_bottom = 720
editor_draw_limits = true
script = ExtResource( 3 )

[node name="FuelBar" parent="Camera" instance=ExtResource( 8 )]
position = Vector2( -42, 143 )
BackgroundColour = Color( 1, 1, 1, 0.501961 )
ForegroundColour = Color( 1, 0, 0, 0.501961 )

[node name="LevelDivider" parent="." instance=ExtResource( 5 )]
position = Vector2( 24, 0 )

[node name="ProgressiveMusicPlayer" parent="." instance=ExtResource( 6 )]
ApproxLoopLength = 12.746

[node name="RandomWallGen" parent="." instance=ExtResource( 7 )]

[connection signal="FuelLevelChanged" from="Ship" to="Camera/FuelBar" method="_on_Ship_FuelLevelChanged"]
